[java] support Java 8 by removing Java 9 List.of implementation